Let rebar compile what we need

--- a/rebar.config
+++ b/rebar.config
@@ -1,1 +1,4 @@
-{port_specs, [{"priv/sassy.so", ["c_src/*.c"]}]}.
+{port_env, [{"CXXFLAGS", "$CXXFLAGS -w"}]}.
+
+{port_specs, [{"priv/sassy.so", ["c_src/*.c",
+                                 "c_src/libsass/*.cpp"]}]}.
