--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
 {port_env, [{"CXXFLAGS", "$CXXFLAGS -w"}]}.
 
-{port_specs, [{"priv/sassy.so", ["c_src/*.c",
+{port_specs, [{"priv/sassy.so", ["c_src/*.cpp",
                                  "c_src/libsass/*.cpp"]}]}.
